--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-intl": "^4.4.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3",
     "yup": "^0.28.3"
