--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/js-cookie": "^2.2.6",
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
+    "jwt-decode": "^2.2.0",
     "material-ui-image": "^3.2.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -41,8 +43,13 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
+    "@types/jwt-decode": "2.2.1",
     "@svgr/webpack": "^5.3.1",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "@types/qs": "6.5.3",
+    "axios": "0.19.0",
+    "dotenv": "6.2.0",
+    "js-cookie": "2.2.1"
   }
 }
