--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/js-cookie": "^2.2.6",
+    "@types/react-router": "^5.1.5",
     "bootstrap": "^4.4.1",
+    "camelcase-keys": "^6.2.2",
     "formik": "^2.1.4",
     "jwt-decode": "^2.2.0",
     "material-ui-image": "^3.2.3",
@@ -16,9 +18,14 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-intl": "^4.4.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3",
-    "yup": "^0.28.3"
+    "yup": "^0.28.3",
+    "@types/qs": "6.5.3",
+    "axios": "0.19.0",
+    "dotenv": "6.2.0",
+    "js-cookie": "2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,13 +50,7 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
-    "@types/jwt-decode": "2.2.1",
-    "@svgr/webpack": "^5.3.1",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "@types/qs": "6.5.3",
-    "axios": "0.19.0",
-    "dotenv": "6.2.0",
-    "js-cookie": "2.2.1"
+    "webpack-cli": "^3.3.11"
   }
 }
