--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/js-cookie": "^2.2.6",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/qs": "6.5.3",
     "@types/react-router": "^5.1.5",
+    "axios": "0.19.0",
     "bootstrap": "^4.4.1",
     "camelcase-keys": "^6.2.2",
+    "dotenv": "6.2.0",
     "formik": "^2.1.4",
+    "js-cookie": "2.2.1",
     "jwt-decode": "^2.2.0",
     "material-ui-image": "^3.2.3",
     "react": "^16.13.1",
@@ -21,11 +26,7 @@
     "react-router": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3",
-    "yup": "^0.28.3",
-    "@types/qs": "6.5.3",
-    "axios": "0.19.0",
-    "dotenv": "6.2.0",
-    "js-cookie": "2.2.1"
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
