--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.9.1",
+    "eslint": "^6.8.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
