--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.4.1",
     "camelcase-keys": "^6.2.2",
     "dotenv": "6.2.0",
+    "env-cmd": "^10.1.0",
     "formik": "^2.1.4",
     "js-cookie": "2.2.1",
     "jwt-decode": "^2.2.0",
@@ -31,6 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-staging": "env-cmd -f .env.staging react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
