--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,5 +41,10 @@
             "error",
             "always"
         ]
-    }
+    },
+    "settings": {
+        "react": {
+          "version": "detect" // Tells eslint-plugin-react to automatically detect the version of React to use
+        }
+      }
 }
