Add override rules to ignore errors when import type or interface

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "env": {
         "browser": true,
+        "node": true,
         "es6": true
     },
     "extends": [
@@ -40,6 +41,30 @@
         "semi": [
             "error",
             "always"
+        ],
+        "react/prop-types": [
+            0
         ]
-    }
+    },
+    "settings": {
+        "react": {
+          "version": "detect" // Tells eslint-plugin-react to automatically detect the version of React to use
+        }
+    },
+    "overrides": [
+        {
+            "files": [
+                "*.ts", 
+                "*.tsx"
+            ],
+            "rules": {
+                "@typescript-eslint/no-unused-vars": [
+                    2, 
+                    { 
+                        "args": "none" 
+                    }
+                ]
+            }
+        }
+    ]
 }
